--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -3,19 +3,19 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.openmrs.module</groupId>
-		<artifactId>basicmodule</artifactId>
+		<artifactId>feedpublishermodule</artifactId>
 		<version>0.1-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>basicmodule-omod</artifactId>
+	<artifactId>feedpublishermodule-omod</artifactId>
 	<packaging>jar</packaging>
-	<name>Basic Module OMOD</name>
-	<description>OpenMRS module project for Basic Module</description>
+	<name>Atom Feed Publisher Module OMOD</name>
+	<description>OpenMRS module project for Atom Feed Publisher Module</description>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
-			<artifactId>basicmodule-api</artifactId>
+			<artifactId>feedpublishermodule-api</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
 		
