--- a/pom.xml
+++ b/pom.xml
@@ -3,19 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.openmrs.module</groupId>
-	<artifactId>basicmodule</artifactId>
+	<artifactId>feedpublishermodule</artifactId>
 	<version>0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>Basic Module</name>
-	<description>Parent project for Basic Module</description>
-
-	<url>http://wiki.openmrs.org/docs/Basic+Module</url>
-
-	<scm>
-		<connection>scm:svn:http://svn.openmrs.org/openmrs-modules/basicmodule/trunk/</connection>
-		<developerConnection>scm:svn:http://svn.openmrs.org/openmrs-modules/basicmodule/trunk/</developerConnection>
-		<url>http://svn.openmrs.org/openmrs-modules/basicmodule/trunk/</url>
-	</scm>
+	<name>AtomFeed Publisher Module</name>
+	<description>Parent project for Atom Feed Publisher Module</description>
 
 	<modules>
 		<module>api</module>
@@ -76,7 +68,7 @@
 	</dependencyManagement>
 
 	<properties>
-		<openMRSVersion>1.8.0-alpha</openMRSVersion>
+		<openMRSVersion>1.9.2</openMRSVersion>
 	</properties>
 
 	<build>
@@ -86,8 +78,8 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
-						<target>1.5</target>
-						<source>1.5</source>
+						<target>1.6</target>
+						<source>1.6</source>
 					</configuration>
 				</plugin>
 				<plugin>
