--- a/api/pom.xml
+++ b/api/pom.xml
@@ -45,6 +45,7 @@
 			<groupId>org.openmrs.test</groupId>
 			<artifactId>openmrs-test</artifactId>
 			<type>pom</type>
+            <scope>test</scope>
 		</dependency>
 	</dependencies>
 	
